--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-"token":"[TOKEN HERE]",
-"client_id":"[BOT CLIENT ID]",
-"prefix":"[BOT PREFIX",
-"owner_id":"[OWNER ID (YOUR ID)]"
+"token":"[TOKEN]",
+"client_id":"[CLIENT ID]",
+"prefix":"[PREFIX",
+"owner_id":"[OWNER ID]"
 }
