--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-"token":"[TOKEN]",
-"client_id":"[CLIENT ID]",
-"modprefix":"[MOD-PREFIX]",
-"prefix":"[PREFIX]",
-"owner_id":"[OWNER ID]",
-"status":"[STATUS]"
+  "token": "[TOKEN]",
+  "client_id": "[CLIENT ID]",
+  "modprefix": "[MOD-PREFIX]",
+  "prefix": "[PREFIX]",
+  "owner_id": "[OWNER ID]",
+  "status": "[STATUS]",
+  "youtube_api_key": "[YOUTUBE API KEY]"
 }
