--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "npm",
     "ytdl"
   ],
-  "author": "devCodex, Joseph Banks",
-  "license": "ISC",
+  "author": "developerCodex, Joseph Banks, ZelAk312, Hackzilla, ASIANBOI",
+  "license": "I put de license in de folder",
   "bugs": {
     "url": "https://github.com/developerCodex/musicbot/issues"
   },
