--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "discord.js": "hydrabolt/discord.js#indev-old",
     "youtube-search": "^1.0.6",
     "mathjs": "^3.5.3",
-    "ytdl-core": "^0.7.17"
+    "ytdl-core": "^0.7.17",
+    "express":"^4"
   }
 }
