--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "prefix": "[/]",
   "owner_id": "[467306557114155018]",
   "status": "[music]",
-  "youtube_api_key": "[YOUTUBE API KEY]",
+  "youtube_api_key": process.env.api,
   "admins": ["467306557114155018"],
   "server_port":"[PORT OF SERVER HERE]"
 }
