--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/developerCodex/musicbot#readme",
   "dependencies": {
-    "discord.js": "hydrabolt/discord.js#indev-old",
+    "discord.js": "^11.4.2",
     "youtube-search": "^1.0.6",
     "mathjs": "^3.5.3",
     "ytdl-core": "^0.7.17",
