--- a/config.json
+++ b/config.json
@@ -1,10 +1,28 @@
-{
+const config = {
+  
   "token": process.env.Token,
+  
+  
   "client_id": process.env.cid,
+  
+  
   "prefix": "[/]",
+  
+  
   "owner_id": "[467306557114155018]",
+  
+  
   "status": "[music]",
+  
+  
   "youtube_api_key": process.env.api,
+  
+  
   "admins": ["467306557114155018"],
+  
+  
   "server_port":"[PORT OF SERVER HERE]"
+  
 }
+
+module.exports = config;
